# website

./: .gitignore  Cargo.toml  Dioxus.toml  build.rs  bun.lockb  index.html  package-lock.json  package.json  tailwind.config.js  tailwind.css  vercel.json
assets/: main.css  tailwind.css.br
assets/fonts/: CartographCF-Bold.woff2.br  CartographCF-BoldItalic.woff2.br  CartographCF-Regular.woff2.br  CartographCF-RegularItalic.woff2.br
public/: site.webmanifest  tailwind.css
src/: main.rs
src/app/: layout.tsx  page.tsx  robots.ts
src/app/api/og/: route.tsx
src/components/: time.tsx
