[package]
name = "marie"
version = "0.1.0"
authors = ["mariesavch <mariesavch@icloud.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.13.0"

dioxus = { version = "0.5.6", features = ["web"] }

# Debug
dioxus-logger = "0.5.1"
reqwest = { version = "0.12.8", features = ["json"] }
serde = "1.0.213"
sir = { version = "0.5.0", features = ["dioxus"] }
web-time = "1.1.0"
